--- a/LojaVirtual/LojaVirtual/LojaVirtual.csproj
+++ b/LojaVirtual/LojaVirtual/LojaVirtual.csproj
@@ -1,17 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3"/>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3"/>
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="Libraries\Lang\Mensagem.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -19,12 +16,10 @@
       <DependentUpon>Mensagem.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="Libraries\Lang\Mensagem.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Mensagem.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-
 </Project>
