--- a/LojaVirtual/LojaVirtual/LojaVirtual.csproj
+++ b/LojaVirtual/LojaVirtual/LojaVirtual.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3"/>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Libraries\Lang\Mensagem.Designer.cs">
